# nanodiffusion

./: .gitignore  PLANNING.md  README.md  STATE.md  nanodiffusion.py  pyproject.toml
exp/: .gitignore  bench.py  train_cifar.py
notebooks/: 01_intuition.ipynb
notebooks/diagrams/: forward-process-comparison.excalidraw  full-comparison.excalidraw  noise-to-data-line.excalidraw  sampling-comparison.excalidraw  training-targets.excalidraw  unet-architecture.excalidraw
